[package]
name = "tokio-websocket"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"


[dependencies]
lazy_static = { version="1.4.0"}
futures = { version="0.3" }
tokio = { version="1.0", features=["io-std","rt-multi-thread","macros"] }
hyper={ version="0.14", features=["server","http1","http2","tcp"] }
serde = { version = "1.0", features = ["derive"] }
tungstenite={ version="0.12", default-features=false }
tokio-tungstenite={ version="0.13" }
uuid = { version = "1.2.1", features = ["v4"] }
tokio-stream = "0.1.11"
futures-channel = "0.3"
hyper-tungstenite = "0.8.1"
url = "2.3.1"
